validate otp fixed